--- a/drumbeat-rdf.jena.provider/pom.xml
+++ b/drumbeat-rdf.jena.provider/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>fi.hut.cs.drumbeat</groupId>
 		<artifactId>drumbeat-jena</artifactId>
-		<version>0.7.0-SNAPSHOT</version>
+		<version>0.7.1-SNAPSHOT</version>
 		<relativePath>../!drumbeat-jena</relativePath>
 	</parent>
 	
@@ -21,6 +21,12 @@
 			<artifactId>jena-core</artifactId>
 			<version>${jena.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>jena-arq</artifactId>
+			<version>${jena.version}</version>
+		</dependency>		
 		
 	</dependencies>
 
