* Increase version number to 0.8.0
* Change library Jena 2 to Jena 3 (namespaces are changed from com.hp.hpl.jena.* to org.apache.jena.*

--- a/drumbeat-rdf.jena.provider.virtuoso/pom.xml
+++ b/drumbeat-rdf.jena.provider.virtuoso/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>fi.hut.cs.drumbeat</groupId>
 		<artifactId>drumbeat-jena</artifactId>
-		<version>0.7.7-SNAPSHOT</version>
+		<version>0.8.0</version>
 		<relativePath>../!drumbeat-jena</relativePath>
 	</parent>
 	
@@ -52,13 +52,6 @@
 			</exclusions>
 		</dependency>
 		-->
-
-		<!-- Apache Jena -->
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>jena-arq</artifactId>
-			<version>${jena.version}</version>
-		</dependency>
 
 	</dependencies>
 	
