--- a/!drumbeat-jena/pom.xml
+++ b/!drumbeat-jena/pom.xml
@@ -4,8 +4,8 @@
 
 	<groupId>fi.hut.cs.drumbeat</groupId>
 	<artifactId>drumbeat-jena</artifactId>
-	<version>0.7.7-SNAPSHOT</version>
-	
+	<version>0.8.0</version>
+
 	<packaging>pom</packaging>
 
 	<name>drumbeat-jena</name>
@@ -13,7 +13,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		
+
 		<!-- All versions updated on 17.11.2015 -->
 		<drumbeat.groupId>${project.groupId}</drumbeat.groupId>
 		<drumbeat.version>${project.version}</drumbeat.version>
@@ -22,7 +22,7 @@
 		<commons-lang3.version>3.3.2</commons-lang3.version>
 		<httpcomponents.version>4.4</httpcomponents.version>
 		<jackson.version>2.5.1</jackson.version>
-		<jena.version>2.13.0</jena.version>
+		<jena.version>3.0.0</jena.version>
 		<jena-iri.version>1.1.1</jena-iri.version>
 		<jsonld-java.version>0.5.1</jsonld-java.version>
 		<log4j.version>1.2.17</log4j.version>
@@ -30,13 +30,21 @@
 		<xercesImpl.version>2.11.0</xercesImpl.version>
 		<xml-apis.version>1.4.01</xml-apis.version>
 		<javax-api.version>2.2.12</javax-api.version>
-		
+
 		<junit.version>4.12</junit.version>
 
 	</properties>
 
 	<dependencies>
 
+		<!-- Apache Jena Core -->
+		<dependency>
+			<groupId>org.apache.jena</groupId>
+			<artifactId>apache-jena-libs</artifactId>
+			<type>pom</type>
+			<version>${jena.version}</version>
+		</dependency>
+		
 		<!-- JUnit -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -44,9 +52,9 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -74,10 +82,10 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<modules>
 		<module>../drumbeat-rdf.jena.provider</module>
 		<module>../drumbeat-rdf.jena.provider.virtuoso</module>
 	</modules>
-	
+
 </project>
