* Increase version number to 0.8.0
* Change library Jena 2 to Jena 3 (namespaces are changed from com.hp.hpl.jena.* to org.apache.jena.*

--- a/!drumbeat-jena/pom.xml
+++ b/!drumbeat-jena/pom.xml
@@ -37,7 +37,7 @@
 
 	<dependencies>
 
-		<!-- Apache Jena Core -->
+		<!-- Apache Jena (Core, ARQ, IRI, TDB) -->
 		<dependency>
 			<groupId>org.apache.jena</groupId>
 			<artifactId>apache-jena-libs</artifactId>
